Add a generator-based HTTP parser.